--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,14 +7,15 @@
     <title>{{ .Site.Title }}</title>
     <meta name="description" content="{{ $.Site.Params.Description }}">
     <meta name="author" content="{{ $.Site.Params.Author }}">
-<!--     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,500,500i" rel="stylesheet"> -->
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/normalize.css">
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/simple-grid.css">
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/pub-tips.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
 
   <body>
-    <div class="container">
+    <div class="grid">
+      {{ partial "navigation.html" . }}
       {{ block "main" . }}{{ end }}
     </div>
   </body>
