--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
-	<h1 class="center">{{ .Title }}</h1>
-	<div class="center">{{ .Content }}</div>
+	<article>
+		<h1>{{ .Title }}</h1>
+		<div>{{ .Content }}</div>
+	</article>
 {{ end }}
