--- a/static/css/pub-tips.css
+++ b/static/css/pub-tips.css
@@ -1,30 +1,112 @@
-/* ----- Utility ----- */
+/* ----- Grid ----- */
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500is,700);
 
-.container {
+body {
+	font-family: Roboto;
+}
+.grid {
 	display: grid;
-	max-width: 200px;
+	grid-template-columns: 300px auto;
+	grid-gap: 3rem;
+}
+
+nav { grid-column: 1; }
+article { 
+	grid-column: 2; 
+	max-width: 85%;
+}
+
+/* ----- Tips ----- */
+
+.tip-fm-grid {
+	display: grid;
+	grid-template-columns: 24px auto;
+	grid-column-gap: 5px;
+	grid-row-gap: .5rem;
+}
+
+/*.tip-fm-row { grid-row-start: 1; }*/
+.tip-fm-col-1 { grid-column: 1; }
+.tip-fm-col-2 { grid-column: 2; }
+
+a.tags { 
+	padding: .2rem .4rem;
 	border: 1px solid #AAA;
 	border-radius: 5px;
+	color: #777;
+	text-decoration: none;
 }
 
-.center {
-	margin: inherit auto;
-	text-align: center;
+a.no-underline { text-decoration: none; }
+
+/* ----- Navigation ----- */
+
+nav { background-color: #D5EDE0; }
+
+i.logo { 
+	margin-top: 3rem;
+	margin-bottom: 1rem;
+	font-size: 48pt; 
 }
 
-body, html {
-	height: 100%;
-	display: grid;
-	font-family: Roboto, sans-serif;
-	font-weight: 300;
-	color: #444;
+.nav {
+	list-style: none;
+	padding-inline-start: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
-	font-weight: 500;
-	margin: 20px 20px 0px 20px;
+.active-section { border-right: 5px solid #ADC; }
+.active-section a:hover { color: #D5EDE0; }
+
+.active-page { border-right: 5px solid #ADCBC3; }
+.active-page a { color: #ADCBC3; }
+.active-page a:hover { color: #ADCBC3; }
+
+.nav-section { padding: 1rem; }
+.nav-page { padding: .25rem 20px; }
+a.nav-link:hover {
+	color: #88A9A8;
 }
 
-p {
-	margin: 20px;
+
+.nav-section .nav-link { 
+	font-weight: 700;
+	font-size: 1.25rem;
+}
+.nav-page .nav-link { 
+	font-weight: 400;
+	font-size: 1.25rem;
+}
+
+/* ----- Tables ----- */
+table {
+	border: 1px solid #E1E1E1;
+	border-radius: 5px;
+	max-width: 90%;
+}
+
+th, td {
+  padding: 12px 15px;
+  text-align: left;
+  border-bottom: 1px solid #DDD; 
+}
+
+td { font-weight: 300; }
+
+tr:last-child th, tr:last-child td { border-bottom: 0; }
+
+/* ----- Utilities ----- */
+.seafoam { 
+	background-color: rgb(213, 237, 224, .5); 
+}
+
+.gray { background-color: #EFEFEF; }
+
+.u-float-left { float: left; }
+.u-float-right { float: right; }
+
+hr {
+	border-top: 0;
+	border-right: 0;
+	border-left: 0;
+	border-bottom: 1px solid #AAA;
 }
