--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,8 +1,8 @@
 {{ define "main" }}
-	<div class="col-7">
+	<article>
 		<h1>{{ .Title }}</h1>
 		{{ range .Site.RegularPages }}
 			<a href="{{ .URL}}">{{ .Title }}</a><br/>
 		{{ end }}
-	</div>
+	</article>
 {{ end }}
