--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,8 +1,6 @@
 {{ define "main" }}
-<div class="row">
-	<div class="col-12">
-		<h1>{{ .Title }}</h1>
-		<div>{{ .Content }}</div>
-	</div>
+<article>
+	<h1>{{ .Title }}</h1>
+	<div>{{ .Content }}</div>
 </div>
 {{ end }}
