--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -1,10 +1,10 @@
 <nav>
-	<div class="right">
+	<div>
 		<a class="logo" href="{{ .Site.BaseURL }}">
 			<i class="logo fas fa-jedi"></i>
 		</a>
 	</div>
-	<ul class="nav right">
+	<ul class="nav">
 	{{ $currentPage := . }}
 	{{ range .Site.Menus.main }}
         <li>
