New lessons section + taxonomy list template, etc.

--- a/layouts/lessons/list.html
+++ b/layouts/lessons/list.html
@@ -2,7 +2,7 @@
 	<article>
 		<h1>{{ .Title }}</h1>
 		<div class="content">
-			{{ range .Site.RegularPages }}
+			{{ range where .Site.RegularPages "Section" "lessons"}}
 				{{ partial "summary.html" . }}
 			{{ end }}
 		</div>
