--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,6 +1,22 @@
 {{ define "main" }}
-<article>
-	<h1>{{ .Title }}</h1>
-	<div>{{ .Content }}</div>
-</div>
+	<article>
+		<h1>{{ .Title }}</h1>
+		<div class="tip-fm-grid">
+			<div class="tip-fm-col-1">
+				<i class="fas fa-calendar-alt"></i>
+			</div>
+			<div class="tip-fm-col-2 date">
+				{{ dateFormat "January 2, 2006" .Date }}
+			</div>
+			<div class="tip-fm-col-1">
+				<i class="fas fa-tags"></i>
+			</div>
+			<div class="tip-fm-col-2">
+				{{ range .Params.tags }}
+					<a class="tags" href="{{ "/tags/" | relLangURL }}{{ . | urlize }}">{{ . }}</a>
+				{{ end }}
+			</div>
+		</div>
+		<div class="content">{{ .Content }}</div>
+	</article>
 {{ end }}
