--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -8,11 +8,11 @@
 	{{ $currentPage := . }}
 	{{ range .Site.Menus.main }}
         <li>
-        	<div class="nav-section {{ if $currentPage.HasMenuCurrent "main" . }}active-section{{ end }}">
+        	<div class="nav-section {{ if $currentPage.IsMenuCurrent "main" . }}active-section{{ end }}">
         		<strong><a class="nav-link no-underline" href="{{ .URL }}">{{ .Name }}</a></strong>
         	</div>
         	<ul class="nav">
-				{{ range where $.Site.RegularPages "Section" "tips" }}
+				{{ range where $.Site.RegularPages "Section" .Identifier }}
 				<li class="nav-page {{ if eq $currentPage.URL .URL }}active-page{{ end }}">
 					<a class="nav-link no-underline" href="{{ .URL }}">{{ .Title }}</a>
 				</li>
