Added new lessons + navigation footer.

--- a/layouts/lessons/single.html
+++ b/layouts/lessons/single.html
@@ -10,5 +10,10 @@
 			</div>
 		</div>
 		<div class="content">{{ .Content }}</div>
+		<div class="next-lesson">
+			{{ if gt .PrevInSection.Weight .Weight }}
+				Next lesson: <a class="next-lesson-link" href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>
+			{{ end }}
+		</div>
 	</article>
 {{ end }}
