--- a/layouts/partials/nav-footer.html
+++ b/layouts/partials/nav-footer.html
@@ -1,3 +1,7 @@
 <div class="nav-footer">
-	Last updated {{ .Site.LastChange.Format "January 2006" }}
+	<div class="nav-footer-col-1">Last updated: {{ .Site.LastChange.Format "January 2006" }}
+	</div> 
+	<div class="nav-footer-col-2">
+		<a class="footer-link" href="{{ .Site.BaseURL }}credits/">Credits</a>
+	</div>
 </div>
