--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -20,6 +20,6 @@
 			</ul>
         </li>
     {{ end }}
-	</ul><!-- 
-	{{ partial "nav-footer.html" . }} -->
+	</ul>
+	{{ partial "nav-footer.html" . }}
 </nav>
