--- a/static/css/pub-tips.css
+++ b/static/css/pub-tips.css
@@ -61,8 +61,18 @@ article > h1 {
 	width: 50%;
 }
 
-.content {
+.content, .next-lesson {
 	margin-top: 3.5rem;
+}
+
+.next-lesson {
+	font-weight: 500;
+	font-size: 1.6rem;
+}
+
+a.next-lesson-link {
+	font-size: 1.6rem;
+	text-decoration: none;
 }
 
 /* ----- Summary ----- */
@@ -126,6 +136,7 @@ ul.nav {
 .active-page a:hover { color: #ADCBC3; }
 
 i.logo, .nav-section { padding: 1rem 2rem; }
+.nav-section { margin-top: 2rem; }
 .nav-page { padding: .5rem 2rem; }
 
 .nav-section a.nav-link { color: #88A9A8; }
@@ -135,6 +146,7 @@ i.logo, .nav-section { padding: 1rem 2rem; }
 
 .nav-page a.nav-link { color: #486773; }
 .nav-page a.nav-link:hover {
+	font-weight: 500;
 	color: #2F4858;
 }
 
@@ -148,14 +160,39 @@ i.logo, .nav-section { padding: 1rem 2rem; }
 	font-size: 1.4rem;
 }
 
+/* ----- Footer ----- */
+
 .nav-footer {
 	position: fixed;
 	left: 0;
 	bottom: 0;
-	padding: 1rem;
+	width: 280px;
+	display: grid;
+	grid-template-columns: 75% auto;
+	grid-column-gap: 5px;
 	font-size: 1.2rem;
 	font-weight: 300;
-	text-align: right;
+	color: #66878D;
+}
+
+.nav-footer-col-1 { 
+	grid-column: 1; 
+	padding-left: 2rem;
+	padding-bottom: 1rem;
+}
+.nav-footer-col-2 { 
+	grid-column: 2; 
+	padding-right: 2rem;
+	padding-bottom: 1rem;
+}
+
+.footer-link { 
+	font-size: 1.2rem; 
+	text-decoration: none;
+	color: #66878D;
+}
+.footer-link:hover {
+	color: #2F4858;
 }
 
 /* ----- Tables ----- */
@@ -207,7 +244,7 @@ h3 { font-size: 1.8rem; }
 h4 { font-size: 1.6rem; }
 h5 { font-size: 1.6rem; }
 h6 { font-size: 1.6rem; }
-p, li, a {
+p, li, a, td {
   font-size: 1.6rem;
   font-weight: 300;
   line-height: 1.5;
@@ -244,7 +281,7 @@ ol {
 
 /* ----- Links ----- */
 
-a.no-underline { 
-	text-decoration: none; 
-	color: #66878D;
+a { 
+	color: #88B0CD; 
+	text-decoration: none;
 }
