Fixed error in lessons/single.html

--- a/layouts/lessons/single.html
+++ b/layouts/lessons/single.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="content">{{ .Content }}</div>
 		<div class="next-lesson">
-			{{ if gt .PrevInSection.Weight .Weight }}
+			{{ if .PrevInSection }}
 				Next lesson: <a class="next-lesson-link" href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>
 			{{ end }}
 		</div>
