--- a/static/css/pub-tips.css
+++ b/static/css/pub-tips.css
@@ -65,14 +65,19 @@ article > h1 {
 	margin-top: 3.5rem;
 }
 
-.next-lesson {
-	font-weight: 500;
-	font-size: 1.6rem;
+a.next-lesson { 
+	display: inline-block;
+	padding: .8rem 1.5rem;
+	border: 1px solid #86B7B6;
+	border-radius: 5px;
+	font-weight: 500; 
+	color: #86B7B6;
+	transition: all .18s;
 }
 
-a.next-lesson-link {
-	font-size: 1.6rem;
-	text-decoration: none;
+a.next-lesson:hover { 
+	color: #FFF;
+	background-color: #86B7B6; 
 }
 
 /* ----- Summary ----- */
@@ -107,8 +112,14 @@ a.next-lesson-link {
 /* ----- Navigation ----- */
 
 nav { 
-	background-color: #D5EDE0; 
+	background-color: #D5EDE0; *//*
+	background-image: linear-gradient(to bottom, #d5ede0, #c1dfd4, #add2c9, #99c5bf, #86b7b6);
 	/*box-shadow: 0 0 7px 0 rgba(1, 65, 75, .15);*/
+}
+
+.sticky {
+	position: sticky;
+	top:0;
 }
 
 i.logo { 
@@ -116,8 +127,8 @@ i.logo {
 	padding: 0;
 	font-size: 2.4rem; 
 	color: #486773;
+	transition: color .18s;
 }
-i.logo:hover { color: #ADCBC3; }
 
 ul.nav {
 	margin: 0;
@@ -125,29 +136,26 @@ ul.nav {
 	padding-inline-start: 0;
 }
 
-.active-section { border-right: 5px solid #ADCBC3; }
-.active-section a:hover { color: #D5EDE0; }
-
-.active-page { border-right: 5px solid #ADCBC3; }
-.active-page a { 
-	font-weight: 500;
-	color: #ADCBC3; 
-}
-.active-page a:hover { color: #ADCBC3; }
+.active-section, .active-page { border-right: 5px solid #ADCBC3; }
+.active-page a { font-weight: 500; }
 
 i.logo, .nav-section { padding: 1rem 2rem; }
 .nav-section { margin-top: 2rem; }
 .nav-page { padding: .5rem 2rem; }
 
-.nav-section a.nav-link { color: #88A9A8; }
-.nav-section a.nav-link:hover {
+.nav-section a.nav-link { 
+	color: #88A9A8; 
+	transition: color .18s;
+}
+.nav-section a.nav-link:hover, 
+.nav-page a.nav-link:hover,
+i.logo:hover {
 	color: #ADCBC3;
 }
 
-.nav-page a.nav-link { color: #486773; }
-.nav-page a.nav-link:hover {
-	font-weight: 500;
-	color: #2F4858;
+.nav-page a.nav-link { 
+	color: #486773; 
+	transition: color .18s;
 }
 
 .nav-section .nav-link { 
@@ -284,4 +292,9 @@ ol {
 a { 
 	color: #88B0CD; 
 	text-decoration: none;
+	transition: color .18s;
+}
+
+a:hover {
+	color: #C1DCEF;
 }
