--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,9 +7,14 @@
     <title>{{ .Site.Title }}</title>
     <meta name="description" content="{{ $.Site.Params.Description }}">
     <meta name="author" content="{{ $.Site.Params.Author }}">
+    
     <link rel="stylesheet" href="{{ .Site.BaseURL }}css/normalize.css">
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/pub-tips.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+    {{ $sass := resources.Get "scss/pub-tips.scss" }}
+    {{ $style := $sass | resources.ToCSS }}
+    <link rel="stylesheet" href="{{ $style.Permalink }}">
+  
   </head>
 
   <body>
