Created partial SCSS files and made color variables.

--- a/layouts/lessons/single.html
+++ b/layouts/lessons/single.html
@@ -11,7 +11,7 @@
 		</div>
 		<div class="content">{{ .Content }}</div>
 		{{ if .PrevInSection }}
-			<a class="next-lesson" href="{{ .PrevInSection.URL }}">Next lesson: {{ .PrevInSection.Title }}</a>
+			<a class="button next-lesson" href="{{ .PrevInSection.URL }}">Next lesson: {{ .PrevInSection.Title }}</a>
 		{{ end }}
 	</article>
 {{ end }}
