--- a/assets/scss/pub-tips.scss
+++ b/assets/scss/pub-tips.scss
@@ -1,6 +1,12 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,300i,500,500is,700);
-
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i);
 @import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700');
+
+@import 'variables';
+@import 'typography';
+@import 'article-front-matter';
+@import 'table';
+@import 'summary';
+@import 'footer';
 
 /* ----- Grid ----- */
 
@@ -18,6 +24,7 @@ html, body {
 nav {
   grid-column: 1;
   height: 100%;
+  background-color: $nav-bg-color;
 }
 
 article {
@@ -25,48 +32,10 @@ article {
   max-width: 1000px;
 }
 
-/* ----- Tips ----- */
-
-.tip-fm-grid {
-  display: grid;
-  grid-template-columns: 24px auto;
-  grid-column-gap: 5px;
-  grid-row-gap: .8rem;
-  margin-top: 1rem;
-}
-
-.tip-fm-col-1 {
-  grid-column: 1;
-}
-
-.tip-fm-col-2 {
-  grid-column: 2;
-}
-
-.date {
-  font-size: 1.2rem;
-  font-weight: 300;
-}
-
-a.tags {
-  margin-right: .5rem;
-  padding: .1rem .25rem;
-  border: 1px solid #AAA;
-  border-radius: 5px;
-  font-size: 1.2rem;
-  color: #777;
-  text-decoration: none;
-  font-weight: 300;
-}
-
-.fa-calendar-alt, .fa-tags {
-  vertical-align: middle;
-}
-
 /* ----- Article ----- */
 
 article > h1 {
-  border-bottom: .4rem solid #ADCBC3;
+  border-bottom: .4rem solid $btn-txt-color;
   padding-bottom: .5rem;
   width: 50%;
 }
@@ -75,57 +44,24 @@ article > h1 {
   margin-top: 3.5rem;
 }
 
-a.next-lesson {
+/* ----- Buttons ----- */
+
+a.button {
   display: inline-block;
   padding: .8rem 1.5rem;
-  border: 1px solid #86B7B6;
+  border: 1px solid $btn-bg-color;
   border-radius: 5px;
   font-weight: 500;
-  color: #86B7B6;
+  color: $btn-txt-color;
   transition: all .18s;
+
   &:hover {
-    color: #FFF;
-    background-color: #86B7B6;
+    color: $btn-hov-txt-color;
+    background-color: $btn-bg-color;
   }
 }
 
-/* ----- Summary ----- */
-
-.summary {
-  margin-bottom: 2rem;
-  padding: 0 2rem 2rem 2rem;
-  border: 1px solid #88A9A8;
-  border-radius: 7px;
-  width: 70%;
-}
-
-.summary-header > a {
-  text-decoration: none;
-  font-weight: 500;
-  color: #2F4858;
-}
-
-.summary-body {
-  font-size: 1.4rem;
-  font-weight: 300;
-}
-
-.read-more {
-  display: block;
-  margin-top: 2rem;
-  font-size: 1.2rem;
-  text-decoration: none;
-  color: #88A9A8;
-}
-
 /* ----- Navigation ----- */
-
-nav {
-  background-color: #D5EDE0;
-  /*
-  background-image: linear-gradient(to bottom, #d5ede0, #c1dfd4, #add2c9, #99c5bf, #86b7b6);
-  /*box-shadow: 0 0 7px 0 rgba(1, 65, 75, .15);*/
-}
 
 .sticky {
   position: sticky;
@@ -134,9 +70,9 @@ nav {
 
 i.logo {
   margin-top: 3rem;
-  padding: 0;
+  padding: 1rem 2rem;
   font-size: 2.4rem;
-  color: #486773;
+  color: $nav-pg-link-color;
   transition: color .18s;
 }
 
@@ -146,44 +82,33 @@ ul.nav {
   padding-inline-start: 0;
 }
 
-.active-section {
-  border-right: 5px solid #ADCBC3;
-}
+.active-section { border-right: 5px solid $nav-active-color; }
 
-.active-page {
-  border-right: 5px solid #ADCBC3;
-  a {
-    font-weight: 500;
-  }
-}
-
-i.logo {
-  padding: 1rem 2rem;
+.active-page { border-right: 5px solid $nav-active-color;
+  
+  a { font-weight: 500; }
 }
 
 .nav-section {
-  padding: 1rem 2rem;
+  padding: 1rem 3rem;
   margin-top: 2rem;
 }
 
-.nav-page {
-  padding: .5rem 2rem;
-}
+.nav-page { padding: .5rem 4.5rem; }
 
 .nav-section a.nav-link {
-  color: #88A9A8;
+  color: $nav-sec-link-color;
   transition: color .18s;
-  &:hover {
-    color: #ADCBC3;
-  }
+ 
+  &:hover { color: $nav-active-color; }
 }
 
-.nav-page a.nav-link:hover, i.logo:hover {
-  color: #ADCBC3;
-}
+.nav-page a.nav-link:hover, i.logo:hover { color: $nav-active-color; }
 
 .nav-page a.nav-link {
-  color: #486773;
+  font-weight: 400;
+  font-size: 1.4rem;
+  color: $nav-pg-link-color;
   transition: color .18s;
 }
 
@@ -193,178 +118,6 @@ i.logo {
   font-size: 1.2rem;
 }
 
-.nav-page {
-  font-weight: 300;
-  font-size: 1.4rem;
-}
-
-/* ----- Footer ----- */
-
-.nav-footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 280px;
-  display: grid;
-  grid-template-columns: 75% auto;
-  grid-column-gap: 5px;
-  font-size: 1.2rem;
-  font-weight: 300;
-  color: #66878D;
-}
-
-.nav-footer-col-1 {
-  grid-column: 1;
-  padding-left: 2rem;
-  padding-bottom: 1rem;
-}
-
-.nav-footer-col-2 {
-  grid-column: 2;
-  padding-right: 2rem;
-  padding-bottom: 1rem;
-}
-
-.footer-link {
-  font-size: 1.2rem;
-  text-decoration: none;
-  color: #66878D;
-  &:hover {
-    color: #2F4858;
-  }
-}
-
-/* ----- Tables ----- */
-
-table {
-  border: 1px solid #E1E1E1;
-  font-size: 1.4rem;
-  border-radius: 5px;
-  max-width: 90%;
-}
-
-th {
-  padding: 12px 15px;
-  text-align: left;
-  border-bottom: 1px solid #DDD;
-}
-
-td {
-  padding: 12px 15px;
-  text-align: left;
-  border-bottom: 1px solid #DDD;
-  font-weight: 300;
-}
-
-tr:last-child {
-  th, td {
-    border-bottom: 0;
-  }
-}
-
 /* ----- Utilities ----- */
 
-.gray {
-  background-color: #EEE;
-}
-
-.u-float-left {
-  float: left;
-}
-
-.u-float-right {
-  float: right;
-}
-
-/* ----- Typography ----- */
-
-html {
-  font-family: 'Roboto', sans-serif;
-  font-size: 62.5%;
-  color: #2F4858;
-  line-height: 1.5;
-}
-
-h1, h2, h3, h4, h5, h6 {
-  font-weight: 500;
-}
-
-h1 {
-  margin: 3rem 0 0 0;
-  font-size: 3.6rem;
-}
-
-h2 {
-  font-size: 2.4rem;
-}
-
-h3 {
-  font-size: 1.8rem;
-}
-
-h4, h5, h6 {
-  font-size: 1.6rem;
-}
-
-p, li, a, td {
-  font-size: 1.6rem;
-  font-weight: 300;
-  line-height: 1.5;
-}
-
-strong {
-  font-weight: 500;
-}
-
-.extra-strong {
-  font-weight: 700;
-}
-
-.left {
-  text-align: left;
-}
-
-.right {
-  text-align: right;
-}
-
-.justify {
-  text-align: justify;
-}
-
-.center {
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.shortcut {
-  padding: 0 .4rem;
-  border: 1px solid #88A9A8;
-  border-radius: .4rem;
-  background-color: #EFFCF5;
-  color: #66878D;
-  font-family: 'Roboto Mono';
-  font-size: 1.2rem;
-  vertical-align: text-bottom;
-}
-
-.tool {
-  font-weight: 500;
-}
-
-ol {
-  font-weight: 300;
-  font-size: 1.125rem;
-}
-
-/* ----- Links ----- */
-
-a {
-  color: #88B0CD;
-  text-decoration: none;
-  transition: color .18s;
-  &:hover {
-    color: #C1DCEF;
-  }
-}
+.gray { background-color: $table-bg-color; }
