--- a/layouts/partials/navigation.html
+++ b/layouts/partials/navigation.html
@@ -15,7 +15,14 @@
 	        	<ul class="nav">
 					{{ range where $.Site.RegularPages "Section" .Identifier }}
 					<li class="nav-page {{ if eq $currentPage.URL .URL }}active-page{{ end }}">
-						<a class="nav-link no-underline" href="{{ .URL }}">{{ .Title }}</a>
+						<a class="nav-link no-underline" href="{{ .URL }}">
+						{{ $begtitle := slicestr .Title 0 6 }}
+						{{ if eq $begtitle "Lesson" }}
+							{{ substr .Title 10 }}
+						{{ else }}
+							{{ .Title }}
+						{{ end }}
+						</a>
 					</li>
 					{{ end }}
 				</ul>
