--- a/layouts/lessons/single.html
+++ b/layouts/lessons/single.html
@@ -20,9 +20,11 @@
 				</div>
 			{{ end }}
 		</div>
-		<div class="content">{{ .Content }}</div>
-		{{ if .PrevInSection }}
-			<a class="button next-lesson" href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>
-		{{ end }}
+		<div class="content">
+			{{ .Content }}
+			{{ if .PrevInSection }}
+				<a class="button next-lesson" href="{{ .PrevInSection.URL }}">{{ .PrevInSection.Title }}</a>
+			{{ end }}
+		</div>
 	</article>
 {{ end }}
