--- a/assets/scss/_quote.scss
+++ b/assets/scss/_quote.scss
@@ -1,14 +1,33 @@
 /* ----- Quotes ----- */
 
 .quote {
-	background-color: tomato;
 	max-width: 90%;
+	padding: 2rem;
+	border: 1px solid $nav-active-color;
+	border-radius: 8px;
 }
 
 .quote-content {
-
+	margin-bottom: 2rem;
+	font-size: 2rem;
+	font-style: italic;
+	font-weight: 300;
+	border-left: 5px solid $nav-active-color;
+	padding: .5rem 2rem;
 }
 
 .quote-credit {
+	text-transform: uppercase;
+	font-size: 1.2rem;
+	font-weight: 500;
+}
 
+.quote-credit a {
+	font-size: inherit;
+	font-weight: inherit;
+	color: inherit;
+
+	&:hover {
+		color: $nav-pg-link-color;
+	}
 }
