--- a/assets/scss/pub-tips.scss
+++ b/assets/scss/pub-tips.scss
@@ -1,5 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:300,300i,400,500,500i);
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400,700');
 
 @import 'variables';
 @import 'typography';
@@ -62,6 +62,7 @@ a.button {
   padding: .8rem 1.5rem;
   border: 1px solid $btn-bg-color;
   border-radius: 5px;
+  font-size: 1.6rem;
   font-weight: 500;
   color: $btn-txt-color;
   transition: all .18s;
