--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,6 +1,7 @@
 {{ define "main" }}
 	<article>
 		<h1>{{ .Title }}</h1>
-		<div>{{ .Content }}</div>
+		<hr/>
+		<div class="content">{{ .Content }}</div>
 	</article>
 {{ end }}
