Fixed ugly tag colors (issue #11) and renamed Photoshop 101 to Publications 101 (issue #15).

--- a/assets/scss/_article-front-matter.scss
+++ b/assets/scss/_article-front-matter.scss
@@ -15,13 +15,19 @@
 
 a.tags {
   margin-right: .5rem;
-  padding: .1rem .25rem;
-  border: 1px solid $tag-border-color;
+  padding: .1rem .4rem;
+  border: 1px solid $btn-txt-color;
   border-radius: 5px;
   font-size: 1.2rem;
-  color: $tag-txt-color;
+  color: $btn-txt-color;
   text-decoration: none;
   font-weight: 300;
+  transition: background-color .18s;
+  transition: color .18s;
+  &:hover {
+    background-color: $btn-bg-color;
+    color: $btn-hov-txt-color;
+  }
 }
 
 .fa-calendar-alt, .fa-tags { vertical-align: middle; }
