--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,8 +1,8 @@
 /* ----- Primary ----- */
 
 $primary-text-color: #2F4858;
-$link-color: #88B0CD;
-$link-hover-color: #C1DCEF;
+$link-color: #86B7B6;
+$link-hover-color: #D5EDE0;
 
 /* ----- Navigation ----- */
 
@@ -17,10 +17,9 @@ $btn-txt-color: #86B7B6;
 $btn-hov-txt-color: #FFFFFF;
 $btn-bg-color: #86B7B6;
 
-/* ----- Tags ----- */
+/* ----- Article ----- */
 
-$tag-border-color: #AAAAAA;
-$tag-txt-color: #777777;
+$hr-color: #86B7B6;
 
 /* ----- Summary ----- */
 
