--- a/assets/scss/pub-tips.scss
+++ b/assets/scss/pub-tips.scss
@@ -45,7 +45,7 @@ article > hr {
   border-top: 0;
   border-left: 0;
   border-right: 0;
-  border-bottom: 2px solid $btn-txt-color;
+  border-bottom: 2px solid $hr-color;
   width: 60%;
 }
 
