Table styling, quote styling, issue #14.

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -36,4 +36,4 @@ $shortcut-text-color: #66878D;
 /* ----- Table ----- */
 
 $table-border-color: #E1E1E1;
-$table-bg-color: #EEEEEE;
+$table-bg-color: #D5EDE0;
