--- a/assets/scss/_table.scss
+++ b/assets/scss/_table.scss
@@ -7,7 +7,10 @@ table {
 th {
   padding: 1.2rem 1.5rem;
   text-align: left;
-  border-bottom: 1px solid $table-border-color;
+  background-color: $table-bg-color;
+  border-radius: 3px 3px 0 0;
+  text-transform: uppercase;
+  font-weight: 500;
 }
 
 td {
@@ -17,8 +20,10 @@ td {
   font-weight: 300;
 }
 
-tr:last-child {
-  th, td {
-    border-bottom: 0;
-  }
+tr:last-child { th, td { border-bottom: 0; } }
+
+.horiz-th { 
+  background-color: $table-bg-color; 
+  border-radius: 3px 0 0 3px;
+  border-bottom: 0;
 }
