I don't remember what changes.

--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -23,12 +23,12 @@ $hr-color: #86B7B6;
 
 /* ----- Summary ----- */
 
-$summary-border-color: #88A9A8;
+$summary-border-color: #86B7B6;
 
 
 /* ----- Shortcuts ----- */
 
-$shortcut-border-color: #88A9A8;
+$shortcut-border-color: #66878D;
 $shortcut-bg-color: #EFFCF5;
 $shortcut-text-color: #66878D;
 
