Moved introductory text to lessons index page.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -14,7 +14,7 @@
 				<div class="portal">
 					<a href="/tips/">
 						<h3>Tips & Tricks</h3>
-						<p>Get yourself out of a pickle and learn how to work faster and more efficiently in our various publications software.</p>
+						<p>Get yourself out of a pickle, or learn how to work faster and more efficiently in our various publications software.</p>
 					</a>
 				</div>
 			</div>
