--- a/assets/scss/_typography.scss
+++ b/assets/scss/_typography.scss
@@ -16,8 +16,16 @@ h1 {
   font-size: 3.6rem;
 }
 
-h2 { font-size: 2.4rem; }
-h3 { font-size: 1.8rem; }
+h2 { 
+  font-size: 2.4rem; 
+  line-height: 3.6rem;
+}
+
+h3 { 
+  margin-top: 3rem;
+  font-size: 1.8rem;
+}
+
 h4, h5, h6 { font-size: 1.6rem; }
 
 .content {
@@ -25,6 +33,18 @@ h4, h5, h6 { font-size: 1.6rem; }
     font-size: 1.6rem;
     font-weight: 300;
     color: $primary-text-color;
+  }
+
+  li {
+    line-height: 1.75;
+
+    table {
+      margin: .75rem 0;
+    }
+  }
+
+  ul > li {
+    list-style-type: disc;
   }
 }
 
@@ -71,5 +91,9 @@ a {
 }
 
 .tool {
+  font-weight: 500;
+}
+
+.menu-cascade {
   font-weight: 500;
 }
